# PCT

./: .gersemi.config  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AddTrackerUncertainty.py  BPF.py  CMakeLists.txt  CodeContribution.md  ITKKWStyleFiles.txt.in  README.md  conf.py  index.md  pctConfiguration.h.in  pctProtonPairsToBackProjection.h  pctProtonPairsToBackProjection.txx  pctProtonPairsToDistanceDrivenProjection.h  pctProtonPairsToDistanceDrivenProjection.txx  pctSchulteMLPFunction.h  pctSchulteMLPFunction.m  pctSchulteMLPFunction.max  pctSchulteMLPFunction.txx  pctbackprojectionbinning.cxx  pctbackprojectionbinning.ggo  pctbinning.cxx  pctbinning.ggo  pctdiffxsection.cxx  pctlluconverter.cxx  pctpairprotons.cxx  pctpairprotonsLMU_IMPCT.cxx  pctpairprotonsLMU_IMPCT.ggo  pctpairprotonsLomaLinda.cxx  poc_new_format.py  pyproject.toml
applications/: CMakeLists.txt  pctargumentparser.py  pctinputprojection_group.py  pctinputprojections_group.py  pctinputprojections_section.ggo  pctversion.py.in
applications/pctaddnoise/: pctaddnoise.py
applications/pctbackprojectionbinning/: CMakeLists.txt  pctbackprojectionbinning.cxx  pctbackprojectionbinning.ggo
applications/pctbackprojections/: CMakeLists.txt  pctbackprojections.cxx  pctbackprojections.ggo
applications/pctbinning/: CMakeLists.txt  pctbinning.cxx  pctbinning.ggo  pctbinning.py
applications/pctfdk/: CMakeLists.txt  pctfdk.cxx  pctfdk.ggo  pctfdk.py
applications/pctfdktwodweights/: CMakeLists.txt  pctfdktwodweights.cxx  pctfdktwodweights.py
applications/pctfillholl/: CMakeLists.txt  pctfillholl.cxx
applications/pctfilterprotons/: pctfilterprotons.py
applications/pctlomalinda/: pctlomalinda.py
applications/pctmostlikelypath/: CMakeLists.txt  pctmostlikelypath.cxx  pctmostlikelypath.ggo
applications/pctpairarithm/: CMakeLists.txt  pctpairarithm.cxx
applications/pctpaircuts/: CMakeLists.txt  pctpaircuts.cxx  pctpaircuts.ggo
applications/pctpairgeometry/: CMakeLists.txt  pctpairgeometry.cxx  pctpairgeometry.ggo
applications/pctpairprotons/: pctpairprotons.py
applications/pctparkershortscanweighting/: CMakeLists.txt  pctparkershortscanweighting.cxx
applications/pctpocnewformat/: CMakeLists.txt  pctpocnewformat.cxx  pctpocnewformat.ggo
applications/pctprojections/: CMakeLists.txt  pctprojections.cxx  pctprojections.ggo
applications/pctschulte/: CMakeLists.txt  pctschulte.cxx
applications/pctsdpweplfit/: pctsdpweplfit.py
applications/pctswapcoordinates/: CMakeLists.txt  pctswapcoordinates.cxx
applications/pctweplfit/: pctweplfit.py
applications/pctzengbackprojections/: CMakeLists.txt  pctzengbackprojections.cxx  pctzengbackprojections.ggo
cmake/: FindGengetopt.cmake  FindROOT.cmake
database/: ScatteringWaterLut_200MeV_3sigmaangle.txt
examples/: README.md
gate/: protonct.py
geant4/: CMakeLists.txt  CheckVolumeSD.cc  CheckVolumeSD.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorMessenger.cc  DetectorMessenger.hh  EventAction.cc  EventAction.hh  EventActionMessenger.cc  EventActionMessenger.hh  G4EmUserPhysics.cc  G4EmUserPhysics.hh  Histo.cc  Histo.hh  HistoManager.cc  HistoManager.hh  HistoMessenger.cc  HistoMessenger.hh  PhysicsList.cc  PhysicsList.hh  PhysicsListMessenger.cc  PhysicsListMessenger.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  StackingAction.cc  StackingAction.hh  StackingMessenger.cc  StackingMessenger.hh  TargetSD.cc  TargetSD.hh  pctGeant4.cxx  pctGeant4.h
include/: SmallHoleFiller.h  SmallHoleFiller.hxx  pctBetheBlochFunctor.h  pctDDParkerShortScanImageFilter.h  pctDDParkerShortScanImageFilter.hxx  pctEnergyAdaptiveMLPFunction.h  pctEnergyStragglingFunctor.h  pctFDKDDBackProjectionImageFilter.h  pctFDKDDBackProjectionImageFilter.hxx  pctFDKDDConeBeamReconstructionFilter.h  pctFDKDDConeBeamReconstructionFilter.hxx  pctFDKDDConeBeamVarianceReconstructionFilter.h  pctFDKDDConeBeamVarianceReconstructionFilter.hxx  pctFDKDDWeightProjectionFilter.h  pctFDKDDWeightProjectionFilter.hxx  pctFFTVarianceImageFilter.h  pctFFTVarianceImageFilter.hxx  pctGgoFunctions.h  pctHoleFillingImageFilter.h  pctHoleFillingImageFilter.hxx  pctMostLikelyPathFunction.h  pctPolynomialMLPFunction.h  pctProtonPairsIterator.h  pctProtonPairsIterator.hxx  pctProtonPairsToBackProjection.h  pctProtonPairsToBackProjection.hxx  pctProtonPairsToDistanceDrivenProjection.h  pctProtonPairsToDistanceDrivenProjection.hxx  pctSchulteMLPFunction.h  pctThirdOrderPolynomialMLPFunction.h  pctThirdOrderPolynomialMLPFunction.hxx  pctZengWeightedBackProjectionImageFilter.h  pctZengWeightedBackProjectionImageFilter.hxx
scripts/: make_in_out_proj.sh  pctbinning.job  pctbinning.sh  pctbinning_fan.job  pctfdk.sh  pctfdk_short.sh  pctpairandcat.sh  pctpairprotons.sh
src/: CMakeLists.txt  pctEnergyAdaptiveMLPFunction.cxx  pctPolynomialMLPFunction.cxx  pctSchulteMLPFunction.cxx
test/: CMakeLists.txt  pctHoleFillingImageFilterTest.cxx  pctOutputArgumentWrapping.py  pctPairProtonsTest.py  pctPolynomialMLPFunctionTest.cxx  pctProtonPairsToDistanceDrivenProjectionTest.cxx  pctPythonWrappingInstantiationTest.py  pct_application_test.py  pct_output_argument_wrapping_test.py  pct_python_example_test.py  pct_python_wrapping_instantiation_test.py  pctapplicationtest.py
utilities/: SetupForDevelopment.sh
wrapping/: CMakeLists.txt  MostLikelyPathFunction.i  __init_pct__.py  itkImageFileWriterPCT.wrap  itkInPlaceImageFilterPCT.wrap  pctBetheBlochFunctor.wrap  pctConfig.py.in  pctDDParkerShortScanImageFilter.wrap  pctEnergyAdaptiveMLPFunction.wrap  pctEnergyStragglingFunctor.wrap  pctExtras.py  pctFDKDDBackProjectionImageFilter.wrap  pctFDKDDConeBeamReconstructionFilter.wrap  pctFDKDDWeightProjectionFilter.wrap  pctHoleFillingImageFilter.wrap  pctMostLikelyPathFunction.wrap  pctPolynomialMLPFunction.wrap  pctProtonPairsToBackProjection.wrap  pctSchulteMLPFunction.wrap  pctThirdOrderPolynomialMLPFunction.wrap  pctZengBackProjectionImageFilter.wrap  rtkFFTProjectionsConvolutionImageFilterPCT.wrap  rtkFFTRampImageFilterPCT.wrap  rtkProjectionsReaderPCT.wrap
(+21 files in other folders)
